--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?e97d65162e8073d7d2d67d5a378feacb";
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(hm, s);
+  })();
+</script>
 </html>
 <style>
   body{
