增加身份信息上传

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>雷猫矿机商城</title>
+  <title>雷猫矿机商城首页 - 专业比特币矿机，矿机托管一站式服务平台[送优惠券]</title>
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="wap-font-scale" content="no">
   <link rel="shortcut icon " type="images/x-icon" href="http://www.dterdal.com/public/images/favicon.ico.png">
